# pedal-pi-effects

./: .gitignore  CMakeLists.txt  README.md  fabfile.py  pedal-pi-effects
etc/service/: pedal-pi-effects.service
src/: CMakeLists.txt
src/ymoch/pedalpieffects/: effect.cc  effect.h  input-equalization.cc  input-equalization.h  main.cc
src/ymoch/pedalpieffects/dsp/: normalization.h  oscillation.h  processor.cc  processor.h  type.cc  type.h
src/ymoch/pedalpieffects/dsp/effect/: amplification.h  biquad-filter.cc  biquad-filter.h  tube-clipping.h
src/ymoch/pedalpieffects/dsp/flow/: chain.h  split.h  toggle.h
src/ymoch/pedalpieffects/math/: constexpr-math.h  signal.h
test/: CMakeLists.txt  main.cc
test/ymoch/pedalpieffects/dsp/: normalization-test.cc  oscillation-test.cc
test/ymoch/pedalpieffects/dsp/effect/: amplification-test.cc  biquad-filter-test.cc  tube-clipping-test.cc
test/ymoch/pedalpieffects/dsp/flow/: chain-test.cc  split-test.cc  toggle-test.cc
test/ymoch/pedalpieffects/math/: constexpr-math-test.cc  signal-test.cc
